--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-name: The Technical Writing Monkey
-author: Carlos
+name: A Guide to the Basics of Libre Office 4.3
+author: Adam Thompson
 markdown: kramdown
 safe: true
 lsi: true
