--- a/_data/topics.yml
+++ b/_data/topics.yml
@@ -1,24 +1,9 @@
-- topic: The Technical Writing Monkey
+- topic: A Guide to the Basics of Libre Office 4.3
   filename: c-intro.html
   child: false
   publish: true
 
-- topic: How to feed a monkey
-  filename: t-feeding.html
-  child: false
-  publish: true
-
-- topic: How to give iced tea to a monkey
-  filename: t-givingtea.html
-  child: true
-  publish: true
-
-- topic: How to put a monkey inside a box
-  filename: t-boxing.html
-  child: false
-  publish: true
-
-- topic: Nutritional recommendations for monkeys
-  filename: r-nutrition.html
+- topic: How to download and install
+  filename: t-installing.html
   child: false
   publish: true
