--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: A Guide to the Basics of Libre Office 4.3
+name: Libre Office 4.3 Basics
 author: Adam Thompson
 markdown: kramdown
 safe: true
