--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: Libre Office 4.3, an Open Source Alternative to MS Office and Apple Works
+name: Libre Office 4.3: an Open Source Alternative to MS Office and Apple Works
 author: Adam Thompson
 markdown: kramdown
 safe: true
