--- a/_data/topics.yml
+++ b/_data/topics.yml
@@ -2,6 +2,11 @@
   filename: t-installing.html
   child: false
   publish: true
+  
+- topic: Libre Office vs Microsoft Office
+  filename: c-compare.html
+  child: false
+  publish: true
 
 - topic: How to create a Writer Document
   filename: t-writer.html
