--- a/_data/topics.yml
+++ b/_data/topics.yml
@@ -1,4 +1,4 @@
-- topic: Libre Office, an alternative to Microsoft Office
+- topic: Libre Office, a MS Office Alternative
   filename: c-compare.html
   child: false
   publish: true
